# Rust-Physics

./: Cargo.toml  README.md  ideas..md
src/: game.rs  game_state.rs  game_states.rs  lib.rs  main.rs  network.rs  physics.rs  shapes.rs  temp.rs  user_interface.rs  utils.rs
src/game/: benchmarks.rs  game_controller.rs  game_view.rs
src/game_state/: gui.rs  gui_component.rs  main_state.rs  pause_state.rs  playing_state.rs
src/game_states/: components.rs  gui.rs  inventory.rs  main_menu.rs  main_state.rs  pause_menu.rs  pause_state.rs  playing.rs  playing_state.rs  settings.rs
src/physics/: circle.rs  collision.rs  material.rs  polygon.rs  rigid_body.rs  shape.rs  shape_type.rs  soft_body.rs  string_body.rs  tiled_mesh.rs
src/shapes/: circle.rs  collision.rs  geometry.rs  physical_shape.rs  physics.rs  polygon.rs
src/user_interface/: components.rs  interfaces.rs
src/utils/: helpers.rs  vector2f.rs
